<resources>
    <string name="app_name">Where\'s My Bus?</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo">app logo</string>
    <string name="team_name">University of Washington\nTeam Bus</string>
    <string name="submit_alert_button">Submit Alert</string>
    <string name="submit_alert_title">Submit an Alert</string>
    <string name="select_forum_type">Select a type of forum:</string>
    <string name="bus_route">Bus Route</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="submit">Submit</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="title_forum_page">Forum</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="choose_bus_route">Choose a bus route:</string>
    <string name="choose_neighborhood">Choose a neighborhood:</string>
    <string name="check_alert_types">Check the type(s) of the alert:</string>
    <string name="view_favorite_routes_switch">View Favorite Routes</string>
    <string name="view_favorite_neighborhoods_switch">View Favorite Neighborhoods</string>
    <string name="alert_description_hint">Enter a description (140 characters max)</string>
    <string name="alert_type_hint">Enter the type (10 characters max)</string>
    <!--
    <string-array name="neighborhood_alert_types">
        <item>Construction</item>
        <item>Traffic</item>
        <item>Event</item>
        <item>Other</item>
    </string-array> -->
    <string name="construction">Construction</string>
    <string name="traffic">Traffic</string>
    <string name="event">Event</string>
    <string name="other">Other</string>
    <string name="question">Question</string>
    <string name="crime">Crime</string>
    <string name="maintenance_issue">Maintenance Issue</string>
    <string name="write_description">Write a description of the alert:</string>
    <string name="routes_affected">Routes possibly affected:</string>
    <string name="alert_type">Alert Type</string>
    <string name="alert_description">Alert Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="submit_comment">Submit a Comment</string>
    <string name="title_activity_submit_comment">Submit a Comment</string>
    <string name="website_url">https://wheresmybus.github.io/android/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_route_map">Map</string>
    <string name="title_activity_search_route_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
