<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    -->

    <TextView
        android:text="@string/submit_alert_title"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:background="@color/mediumBlue"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center" />

    <TextView
        android:text="@string/select_forum_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:layout_height="1000dp">

        <RadioButton
            android:text="@string/bus_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_bus_route"
            android:onClick="onRadioButtonClicked"
            app:buttonTint="@color/darkBlue"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:text="@string/neighborhood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_neighborhood"
            android:onClick="onRadioButtonClicked"
            app:buttonTint="@color/darkBlue"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true" />

    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="144dp"
        android:id="@+id/spinner" />

</RelativeLayout>