<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:background="@color/lighterBlue"
        android:layout_alignParentTop="true"
        android:id="@+id/background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="150dp"
        android:layout_alignBottom="@+id/date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/alert_type"
        android:text="@string/alert_type"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:layout_toLeftOf="@+id/thumbs_up"
        android:layout_toStartOf="@+id/thumbs_up" />

    <TextView
        android:text="@string/alert_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/alert_description"
        android:paddingTop="10dp"
        android:layout_toLeftOf="@+id/thumbs_up"
        android:layout_toStartOf="@+id/thumbs_up"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/routes_affected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/routes_affected"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"
        android:layout_toLeftOf="@+id/thumbs_up"
        android:layout_toStartOf="@+id/thumbs_up" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:paddingTop="10dp"
        android:layout_below="@+id/routes_affected"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_toRightOf="@+id/date"
        android:layout_toEndOf="@+id/date" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/thumbs_down"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/thumbs_down"
        android:backgroundTint="@android:color/transparent"
        android:tint="@android:color/darker_gray" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/thumbs_up"
        android:layout_alignBottom="@+id/thumbs_down"
        android:layout_toLeftOf="@+id/thumbs_down"
        android:layout_toStartOf="@+id/thumbs_down"
        android:id="@+id/thumbs_up"
        android:backgroundTint="@android:color/transparent"
        android:tint="@android:color/darker_gray" />

    <TextView
        android:text="Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thumbs_down"
        android:layout_toRightOf="@+id/thumbs_up"
        android:layout_toEndOf="@+id/thumbs_up"
        android:id="@+id/num_thumbs_down"
        android:textColor="@android:color/black"
        android:gravity="center" />

    <TextView
        android:text="Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_description"
        android:layout_toRightOf="@+id/alert_description"
        android:layout_toEndOf="@+id/alert_description"
        android:id="@+id/num_thumbs_up"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_alignBottom="@+id/num_thumbs_down" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/background"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/time"
        android:layout_toEndOf="@+id/time"
        android:layout_above="@+id/submit_comment_button"
        android:id="@+id/comments"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/submit_comment_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:background="@color/lightGreen"
        android:text="@string/submit_comment" />

</RelativeLayout>
