<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:id="@+id/background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/time"
        android:background="@color/lighterBlue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/alert_type"
        android:text="@string/alert_type"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:layout_toLeftOf="@+id/thumbs_up"
        android:layout_toStartOf="@+id/thumbs_up" />

    <TextView
        android:text="@string/alert_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/alert_description"
        android:paddingTop="10dp"
        android:layout_toLeftOf="@+id/thumbs_up"
        android:layout_toStartOf="@+id/thumbs_up"
        android:textColor="@android:color/black" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/thumbs_down"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/thumbs_down"
        android:backgroundTint="@android:color/transparent"
        android:tint="@android:color/darker_gray" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/thumbs_up"
        android:layout_alignBottom="@+id/thumbs_down"
        android:layout_toLeftOf="@+id/thumbs_down"
        android:layout_toStartOf="@+id/thumbs_down"
        android:id="@+id/thumbs_up"
        android:backgroundTint="@android:color/transparent"
        android:tint="@android:color/darker_gray" />

    <TextView
        android:text="Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thumbs_down"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/num_thumbs_down"
        android:layout_toRightOf="@+id/thumbs_up"
        android:layout_toEndOf="@+id/thumbs_up"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thumbs_down"
        android:layout_toLeftOf="@+id/thumbs_down"
        android:id="@+id/num_thumbs_up"
        android:layout_alignLeft="@+id/thumbs_up"
        android:layout_alignStart="@+id/thumbs_up"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_description"
        android:layout_toRightOf="@+id/date"
        android:layout_toEndOf="@+id/date"
        android:id="@+id/time"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:paddingTop="10dp"
        android:layout_alignBaseline="@+id/time"
        android:layout_alignBottom="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
            android:text="Comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/background"
            android:id="@+id/comments_header"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/date"
            android:layout_toRightOf="@+id/date"
            android:textColor="@android:color/black"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="16dp"
            android:textStyle="normal|bold"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/date"
        android:layout_toRightOf="@+id/date"
        android:id="@+id/comments"
        android:layout_above="@+id/submit_comment_button"
        android:layout_below="@+id/comments_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/submit_comment_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:background="@color/lightGreen"
        android:text="@string/submit_comment"
        android:onClick="switchToSubmitComment"/>

</RelativeLayout>
